--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="assets/css/normalize.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Roboto+Condensed&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -17,25 +20,27 @@
         <![endif]-->
 
         <!-- Header -->
-        <header id="header">
-            <div class="">
-                <span class=""></span>
-            </div>
-            <div class="">
+        <div class="main-container">
+            <header id="header">
                 <div class="">
-                    <h1>Kyle Laselute</h1>
-                    <p>A Front-End Developer/ Designer</p>
+                    <span class=""></span>
                 </div>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+                <div class="">
+                    <div class="name">
+                        <h1>Kyle Laselute</h1>
+                        <p>A Front-End Developer / Designer</p>
+                    </div>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
 
         <!-- Main -->
         <div id="main">
@@ -44,16 +49,42 @@
             <article id="work">
                 <h2 class="">Work</h2>
                 <span class=""><img src="" alt="" /></span>
-                <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+                <div class="project-block">
+                    <span><img src="" alt=""></span>
+                    <p>I created a simple javascript quiz app with questions from the Marvel "comic" universe. I used Bootstrap 4 for simple styling and used vanilla JS. I created this project to get a better understanding of DOM manipulation and object building. You can test out the app or view the source code.</p>
+                </div>
+                <div>
+                    <button href="https://github.com/K-Laselute/marveljsquiz">Source Code</button>
+                    <button href="">Test Knowledge</button>
+                </div>
             </article>
 
         <!-- Work -->
             <article id="Skills">
                 <h2 class="">Skills</h2>
                 <span class=""><img src="" alt="" /></span>
-                <p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-                <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+                <h3>Techie Skills</h3>
+                <div class="tech-skills">
+                    <div>
+                        <img class="skill-icon" src="assets/images/html5pix.png" alt="HTML5">
+                        <img class="skill-icon" src="assets/images/css3pix.png" alt="css3">
+                        <img class="skill-icon" src="assets/images/jspix.png" alt="Javascript">
+                    </div>
+                    <div>
+                        <img class="skill-icon" src="assets/images/jquerypix.png" alt="jquery">
+                        <img class="skill-icon" src="assets/images/bootstrappix.png" alt="Bootstrap">
+                        <img class="skill-icon" src="assets/images/gitpix.png" alt="Git">
+                    </div>
+                    <div>
+                        <img class="skill-icon" src="assets/images/githubpix.png" alt="">
+                    </div>
+                </div>
+                <h3>Soft skills</h3>
+                <div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
             </article>
 
         <!-- About -->
@@ -98,6 +129,6 @@
             <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
         </footer>
         
-        <script src="" async defer></script>
+        <script src="assets/javascript/app.js" async defer></script>
     </body>
 </html>
