--- a/index.html
+++ b/index.html
@@ -21,22 +21,24 @@
 
         <!-- Header -->
         <div class="main-container">
+            <div class="vl-t"></div>
             <header id="header">
                 <div class="">
                     <span class=""></span>
                 </div>
                 <div class="">
-                    <div class="name">
-                        <h1>Kyle Laselute</h1>
+                    <div class="title">
+                        <h1 id="name">Kyle Laselute</h1>
                         <p>A Front-End Developer / Designer</p>
                     </div>
                 </div>
+                <div class="vl-b"></div>
                 <nav>
                     <ul>
-                        <li><a href="#work">Work</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#work">work</a></li>
+                        <li><a href="#skills">skills</a></li>
+                        <li><a href="#about">about</a></li>
+                        <li><a href="#contact">contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -128,7 +130,7 @@
         <footer id="footer">
             <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
         </footer>
-        
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="assets/javascript/app.js" async defer></script>
     </body>
 </html>
