Applying different layout removed js

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <div class="vl-b"></div>
                 <nav>
                     <ul>
-                        <li><a href="#work">work</a></li>
-                        <li><a href="#skills">skills</a></li>
-                        <li><a href="#about">about</a></li>
-                        <li><a href="#contact">contact</a></li>
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -62,7 +62,7 @@
             </article>
 
         <!-- Work -->
-            <article id="Skills">
+            <article id="skills">
                 <h2 class="">Skills</h2>
                 <span class=""><img src="" alt="" /></span>
                 <h3>Techie Skills</h3>
@@ -125,7 +125,7 @@
                     <li><a href="#" class=""><span class="">GitHub</span></a></li>
                 </ul>
             </article>
-
+        </div>
         <!-- Footer -->
         <footer id="footer">
             <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
