Added jquery scrip

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                     <div class="vl-b">
                     </div>
-                    <nav>
+                    <nav class="nav">
                         <ul>
                             <li><a href="#">Work</a></li>
                             <li><a href="#">Skills</a></li>
