Added jquery animations. Added different background image. Added different styling to box links.

--- a/index.html
+++ b/index.html
@@ -23,19 +23,12 @@
             <!-- Header -->
             <div class="main-container">
                 <header id="header">
-                    <div class="vl-t">
-                    </div>
-                    <div class="">
-                        <span class=""></span>
-                    </div>
-                    <div class="">
+                    <div class="vl-t"></div>
                         <div class="title">
                             <h1 id="name">Kyle Laselute</h1>
                             <p>A Front-End Developer / Designer</p>
                         </div>
-                    </div>
-                    <div class="vl-b">
-                    </div>
+                    <div class="vl-b"></div>
                     <nav class="nav">
                         <ul>
                             <li><a href="#">Work</a></li>
@@ -98,10 +91,8 @@
                 <article id="about">
                     <h2 class="">About</h2>
                     <span class=""><img src="" alt="" /></span>
-                    <p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend
-                        sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam.
-                        Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum
-                        primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+                    <p>Human being from Albuquerque, New Mexico. I'm a self taught developer/designer who just wants to make you look awesome.</p> <br>
+                    <p>I'm very passionate about creating experiences through the magical portal that is the internet. I like turning difficult problems into beautiful, simple, creative designs. I love researching about new trends in development and will always consider myself as a student. I believe the best way to learn something is to be passionate about it, to want to understand it, to do it without being told,to know your why and to invest time in that daily. Also, I play too much video games and most of my vocabulary comes from movie quotes.</p>
                 </article>
             
                 <!-- Contact -->
@@ -134,11 +125,10 @@
                     </ul>
                 </article>
             </div>
-            <!-- Footer -->
+
             <footer id="footer">
                 <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
             </footer>
-
         </div>
         
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
