added additional styling and HTML refactoring.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <!-- Header -->
             <div class="main-container">
                 <header id="header">
+                    <div class="icon">
+                        <img src="/assets/images/Logo.svg" alt="logo">
+                    </div>
                     <div class="vl-t"></div>
                         <div class="title">
                             <h1 id="name">Kyle Laselute</h1>
