--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet"
-            href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Roboto+Condensed&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Raleway&display=swap" rel="stylesheet">
 
     </head>
     <body>
@@ -60,6 +59,24 @@
                     <div>
                         <button>Source Code</button>
                         <button>Test Knowledge</button>
+                    </div>
+                    <div class="project-block">
+                        <span><img src="" alt=""></span>
+                        <h3>Fully responsive Skate shop site</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, magni aspernatur nemo, recusandae neque eligendi totam quae molestias dolor autem, temporibus minus doloribus! Placeat, quisquam quam magni consequatur ab delectus!</p>
+                    </div>
+                    <div>
+                        <button>Source Code</button>
+                        <button>View Site</button>
+                    </div>
+                    <div class="project-block">
+                        <span><img src="" alt=""></span>
+                        <h3>Weather App</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nemo, rerum nobis laudantium maiores ea laboriosam praesentium hic voluptas temporibus adipisci odit quod consequatur qui exercitationem veniam culpa doloribus officia?</p>
+                    </div>
+                    <div>
+                        <button>Source Code</button>
+                        <button>See App</button>
                     </div>
                 </article>
             
