added correction for file location.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="main-container">
                 <header id="header">
                     <div class="icon">
-                        <img src="/assets/images/Logo.svg" alt="logo">
+                        <img src="./assets/images/Logo.svg" alt="logo">
                     </div>
                     <div class="vl-t"></div>
                         <div class="title">
@@ -53,21 +53,21 @@
                     <span class=""><img src="" alt="" /></span>
                     <div class="project-block">
                         <span><img src="" alt=""></span>
-                        <h3>Marvel Quiz App</h3>
+                        <h3>Marvel Quiz</h3>
                         <p>I created a simple javascript quiz app with questions from the Marvel "comic" universe. I used Bootstrap 4 for simple styling and used vanilla JS. I created this project to get a better understanding of DOM manipulation and object building. You can test out the app or view the source code.</p>
                     </div>
                     <div>
-                        <button>Source Code</button>
-                        <button>Test Knowledge</button>
+                        <a href="https://github.com/K-Laselute/marveljsquiz" class="button1">Source Code</a>
+                        <a href="" class="button1">View App</a>
                     </div>
                     <div class="project-block">
                         <span><img src="" alt=""></span>
-                        <h3>Fully responsive Skate shop site</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, magni aspernatur nemo, recusandae neque eligendi totam quae molestias dolor autem, temporibus minus doloribus! Placeat, quisquam quam magni consequatur ab delectus!</p>
+                        <h3>Random drink generator</h3>
+                        <p>A drink generator app that integrates with a JSON API from thecocktaildb.com. This project utilized the 3 core technologies HTML/CSS/Vanilla JS, as well as some AJAX and Bootstrap 4 for style.</p>
                     </div>
                     <div>
-                        <button>Source Code</button>
-                        <button>View Site</button>
+                        <a href="https://github.com/K-Laselute/Drinkapp" class="button1">Source Code</a>
+                        <a href="" class="button1">View App</a>
                     </div>
                     <div class="project-block">
                         <span><img src="" alt=""></span>
@@ -75,8 +75,8 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nemo, rerum nobis laudantium maiores ea laboriosam praesentium hic voluptas temporibus adipisci odit quod consequatur qui exercitationem veniam culpa doloribus officia?</p>
                     </div>
                     <div>
-                        <button>Source Code</button>
-                        <button>See App</button>
+                        <a href="" class="button1">Source Code</a>
+                        <a href="" class="button1">View App</a>
                     </div>
                 </article>
             
