email form test.

--- a/index.html
+++ b/index.html
@@ -117,23 +117,23 @@
                     <div class="close">X</div>
                     <h2 class="major">Let's Talk.</h2>
                     <p>I'll buy the coffee.</p>
-                    <form method="post" action="#">
+                    <form action="http://formspree.io/klaselute@gmail.com">
                         <div class="fields">
                             <div class="field half">
                                 <label for="name">Name</label>
-                                <input type="text" name="name" id="name" />
+                                <input type="text" name="_replyto" id="name" />
                             </div>
                             <div class="field half">
                                 <label for="email">Email</label>
-                                <input type="text" name="email" id="email" />
+                                <input type="email" name="email" id="email" />
                             </div>
                             <div class="field">
                                 <label for="message">Message</label>
-                                <textarea name="message" id="message" rows="4"></textarea>
+                                <textarea name="body" id="message" rows="4"></textarea>
                             </div>
                         </div>
                         <ul class="actions">
-                            <li><input type="submit" value="Send Message" class="primary" /></li>
+                            <li><input type="submit" value="Send" class="primary" /></li>
                         </ul>
                     </form>
                 </article>
