--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="close">X</div>
                     <h2 class="major">Let's Talk.</h2>
                     <p>I'll buy the coffee.</p>
-                    <form action="http://formspree.io/klaselute@gmail.com">
+                    <form method="POST" action="http://formspree.io/klaselute@gmail.com">
                         <div class="fields">
                             <div class="field half">
                                 <label for="name">Name</label>
