--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <div class="fields">
                             <div class="field half">
                                 <label for="name">Name</label>
-                                <input type="text" name="_replyto" id="name" />
+                                <input type="text" name="name" id="name" />
                             </div>
                             <div class="field half">
                                 <label for="email">Email</label>
