removed extra styling tags. simplified html and css.

--- a/index.html
+++ b/index.html
@@ -47,32 +47,22 @@
                 <!-- Intro -->
                 <article id="work">
                     <div class="close">X</div>
-                    <h2 class="">Work</h2>
-                    <span class=""><img src="" alt="" /></span>
+                    <h2>Work</h2>
                     <div class="project-block">
-                        <span><img src="" alt=""></span>
                         <h3>Marvel Quiz</h3>
                         <p>I created a simple javascript quiz app with questions from the Marvel "comic" universe. I wanted to make a quiz app to help get me more familiar with JavaScript, DOM Manipulation, and localStorage. You can test out the app or view the source code.</p>
-                    </div>
-                    <div>
                         <a href="https://github.com/K-Laselute/marveljsquiz" class="button1">Source Code</a>
                         <a href="https://k-laselute.github.io/marveljsquiz/" class="button1">View App</a>
                     </div>
                     <div class="project-block">
-                        <span><img src="" alt=""></span>
                         <h3>Random Drink Generator</h3>
                         <p>A drink generator app that integrates with a JSON API from thecocktaildb.com. This project utilized the 3 core technologies HTML/CSS/Vanilla JS, as well as some AJAX and Bootstrap 4 for style.</p>
-                    </div>
-                    <div>
                         <a href="https://github.com/K-Laselute/Drinkapp" class="button1">Source Code</a>
                         <a href="https://k-laselute.github.io/Drinkapp/" class="button1">View App</a>
                     </div>
                     <div class="project-block">
-                        <span><img src="" alt=""></span>
                         <h3>Weather App</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nemo, rerum nobis laudantium maiores ea laboriosam praesentium hic voluptas temporibus adipisci odit quod consequatur qui exercitationem veniam culpa doloribus officia?</p>
-                    </div>
-                    <div>
                         <a href="" class="button1">Source Code</a>
                         <a href="" class="button1">View App</a>
                     </div>
@@ -81,33 +71,34 @@
                 <!-- Work -->
                 <article id="skills">
                     <div class="close">X</div>
-                    <h2 class="">Skills</h2>
-                    <span class=""><img src="" alt="" /></span>
+                    <h2>Skills</h2>
                     <h3>Technologies I've worked with.</h3>
                     <div class="tech-icons">
-                        <i class="devicon-html5-plain-wordmark colored"></i>
-                        <i class="devicon-css3-plain-wordmark colored"></i>
-                        <i class="devicon-javascript-plain colored"></i>
-                        <i class="devicon-react-original-wordmark colored"></i>
-                        <i class="devicon-jquery-plain-wordmark colored"></i>
-                        <i class="devicon-bootstrap-plain-wordmark colored"></i>
+                        <div>
+                            <i class="devicon-html5-plain-wordmark colored"></i>
+                            <i class="devicon-css3-plain-wordmark colored"></i>
+                            <i class="devicon-javascript-plain colored"></i>
+                            <i class="devicon-react-original-wordmark colored"></i>
+                            <i class="devicon-jquery-plain-wordmark colored"></i>
+                            <i class="devicon-bootstrap-plain-wordmark colored"></i>
+                            <i class="devicon-git-plain-wordmark colored"></i>
+                        </div>
                     </div>
-                    <h3>Soft skills that I excel at.</h3>
+                    <h3>"soft" skills that I shine at.</h3>
                     <div class="tech-icons">
-                        <i class="devicon-google-plain-wordmark"></i>
-                        <i class="devicon-git-plain-wordmark colored"></i>
-                        <i class="devicon-github-plain-wordmark"></i>
-                        <i class="devicon-illustrator-line colored"></i>
-                        <i class="devicon-photoshop-line colored"></i>
-                        <i class="devicon-wordpress-plain-wordmark"></i>
+                        <div>
+                            <i class="devicon-google-plain-wordmark"></i>
+                            <i class="devicon-github-plain-wordmark"></i>
+                            <i class="devicon-illustrator-line colored"></i>
+                            <i class="devicon-photoshop-line colored"></i>
+                        </div>
                     </div>
                 </article>
             
                 <!-- About -->
                 <article id="about">
                     <div class="close">X</div>
-                    <h2 class="">About</h2>
-                    <span class=""><img src="" alt="" /></span>
+                    <h2>About</h2>
                     <p>Human being from Albuquerque, New Mexico. I'm a self taught developer/designer who just wants to make you look awesome.</p> <br>
                     <p>I'm very passionate about creating experiences through the magical portal that is the internet. I like turning difficult problems into beautiful, simple, creative designs. I love researching about new trends in development and will always consider myself as a student. I believe the best way to learn something is to be passionate about it, understand it, to do it without being told, to know your why and to invest time in that daily. Also, I play too much video games and most of my vocabulary comes from movie quotes.</p>
                 </article>
@@ -115,7 +106,7 @@
                 <!-- Contact -->
                 <article id="contact">
                     <div class="close">X</div>
-                    <h2 class="major">Let's Talk.</h2>
+                    <h2>Let's Talk.</h2>
                     <p>I'll buy the coffee.</p>
                     <form method="POST" action="https://formspree.io/klaselute@gmail.com">
                         <div class="fields">
