added images to each linked article. Reworked css. Updated project information and links.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <article id="work">
                     <div class="close">X</div>
                     <h2>Work</h2>
+                    <div class="work-img"></div>
                     <div class="project-block">
                         <h3>Marvel Quiz</h3>
                         <p>I created a simple javascript quiz app with questions from the Marvel "comic" universe. I wanted to make a quiz app to help get me more familiar with JavaScript, DOM Manipulation, and localStorage. You can test out the app or view the source code.</p>
@@ -61,10 +62,9 @@
                         <a href="https://k-laselute.github.io/Drinkapp/" class="button1">View App</a>
                     </div>
                     <div class="project-block">
-                        <h3>Weather App</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nemo, rerum nobis laudantium maiores ea laboriosam praesentium hic voluptas temporibus adipisci odit quod consequatur qui exercitationem veniam culpa doloribus officia?</p>
-                        <a href="" class="button1">Source Code</a>
-                        <a href="" class="button1">View App</a>
+                        <h3>Real Estate Website</h3>
+                        <p>I built a Real Estate website using React JS. The project has dummy data that is able to be filtered through like a normal real estate site.The project utilizes major concepts with react like props, states, and forms.</p>
+                        <a href="https://github.com/K-Laselute/real-estate" class="button1">Source Code</a>
                     </div>
                 </article>
             
@@ -72,6 +72,7 @@
                 <article id="skills">
                     <div class="close">X</div>
                     <h2>Skills</h2>
+                    <div class="skills-img"></div>
                     <h3>Technologies I've worked with.</h3>
                     <div class="tech-icons">
                         <div>
@@ -84,7 +85,7 @@
                             <i class="devicon-git-plain-wordmark colored"></i>
                         </div>
                     </div>
-                    <h3>"soft" skills that I shine at.</h3>
+                    <h3>Other skills that I shine at.</h3>
                     <div class="tech-icons">
                         <div>
                             <i class="devicon-google-plain-wordmark"></i>
@@ -99,7 +100,8 @@
                 <article id="about">
                     <div class="close">X</div>
                     <h2>About</h2>
-                    <p>Human being from Albuquerque, New Mexico. I'm a self taught developer/designer who just wants to make you look awesome.</p> <br>
+                    <div class="about-img"></div>
+                    <p>Human being from Albuquerque, New Mexico. I'm a self taught developer/designer who just wants to make you look awesome.</p>
                     <p>I'm very passionate about creating experiences through the magical portal that is the internet. I like turning difficult problems into beautiful, simple, creative designs. I love researching about new trends in development and will always consider myself as a student. I believe the best way to learn something is to be passionate about it, understand it, to do it without being told, to know your why and to invest time in that daily. Also, I play too much video games and most of my vocabulary comes from movie quotes.</p>
                 </article>
             
